engage casecurity plugin in integration tests
Change-Id: Ic1f27b194cc4fb189827adec32c5b0528918ed66

--- a/support/tests/lightwave/docker-compose-mutentca.yml
+++ b/support/tests/lightwave/docker-compose-mutentca.yml
@@ -15,6 +15,7 @@ services:
     environment:
         - LIGHTWAVE_DOMAIN=${LIGHTWAVE_DOMAIN}
         - LIGHTWAVE_PASS=${LIGHTWAVE_PASS}
+        - AWS_KMS_URN=${AWS_KMS_URN}
     tty: true
 networks:
   lightwave:
