MutentCA: Implemented initialize root CA from config file
*RootCA can be initialized in MutentCA in two ways.
1) A certificate can be imported and used to create RootCA
2) Root CA will use self signed certificate which is generated based on config file

*Added unit tests
*Verified memcheck

Change-Id: I6c73541ad3a7cc673519a76ab32575d10ffa9c1a

--- a/configure.ac
+++ b/configure.ac
@@ -1961,6 +1961,7 @@ AC_CONFIG_FILES([Makefile
                  mutentca/tests/unit-tests/Makefile
                  mutentca/tests/unit-tests/server/Makefile
                  mutentca/tests/unit-tests/server/api/Makefile
+                 mutentca/tests/unit-tests/server/api/test-mutentca-config/Makefile
                  mutentca/tests/unit-tests/server/authz/Makefile
                  mutentca/tests/unit-tests/server/common/Makefile
                  mutentca/tests/unit-tests/server/db/Makefile
@@ -2039,7 +2040,21 @@ AC_CONFIG_FILES([Makefile
 AC_CONFIG_LINKS([
                 vmca/unit-tests/service/common/test-policy-configs/test-snpolicy-valid.json:vmca/unit-tests/service/common/test-policy-configs/test-snpolicy-valid.json
                 ])
-
+AC_CONFIG_LINKS([
+                mutentca/tests/unit-tests/server/api/test-mutentca-config/test-mutentca-config.json:mutentca/tests/unit-tests/server/api/test-mutentca-config/test-mutentca-config.json
+                ])
+AC_CONFIG_LINKS([
+                mutentca/tests/unit-tests/server/api/test-mutentca-config/test-mutentca-config2.json:mutentca/tests/unit-tests/server/api/test-mutentca-config/test-mutentca-config2.json
+                ])
+AC_CONFIG_LINKS([
+                mutentca/tests/unit-tests/server/api/test-mutentca-config/test-mutentca-config-invalid.json:mutentca/tests/unit-tests/server/api/test-mutentca-config/test-mutentca-config-invalid.json
+                ])
+AC_CONFIG_LINKS([
+                mutentca/tests/unit-tests/server/api/test-mutentca-config/test-certificate.pem:mutentca/tests/unit-tests/server/api/test-mutentca-config/test-certificate.pem
+                ])
+AC_CONFIG_LINKS([
+                mutentca/tests/unit-tests/server/api/test-mutentca-config/test-privatekey.pem:mutentca/tests/unit-tests/server/api/test-mutentca-config/test-privatekey.pem
+                ])
 AC_CONFIG_LINKS([
                 mutentca/tests/unit-tests/server/db/test-mutentcadb-config/test-mutentcadb-config.json:mutentca/tests/unit-tests/server/db/test-mutentcadb-config/test-mutentcadb-config.json
                 ])
