--- a/mutentca/tests/unit-tests/server/api/Makefile.am
+++ b/mutentca/tests/unit-tests/server/api/Makefile.am
@@ -3,6 +3,9 @@ bin_PROGRAMS = testmutentcaapi
 check_PROGRAMS = testmutentcaapi
 TESTS = testmutentcaapi
 
+SUBDIRS = \
+    test-mutentca-config
+
 testmutentcaapi_SOURCES = \
     ca.c \
     main.c
