gRPC skeleton server added to postd
    POST notification needs a gRPC server. This is a proof-of-concept
    integration of a gRPC server into postd. The RPC method is a
    dummy function which adds two integers. This will later be replaced
    with the actual RPC methods once the proto file for notification
    is written.

    Testing done: Built not using --with-grpc. Built including --with-grpc,
    with the dependent grpc-devel/protobuf-devel present and not present.
    Verified configure performed correct validation for dependent components.
    Installed post RPM, started postd service, validated it is listening on
    port 50053. Ran domath_client against postd gRPC server to verify
    connectivity and the RPC called server stub and returned the proper answer.

    Integrated review comments.

Change-Id: Ic7a5d8394cc1cda6c57054e3f7546d2d4c4d6691

--- a/configure.ac
+++ b/configure.ac
@@ -1265,6 +1265,38 @@ fi
 
 AM_CONDITIONAL(NOTIFY_VMDIR_PROVIDER, [$NOTIFY_VMDIR_PROVIDER])
 
+AC_ARG_WITH([grpc],
+    [AC_HELP_STRING([--with-grpc=yes|no],
+                    [build gRPC server and client library (default=no)])],
+    [
+        if test x"$withval" = x"yes"
+        then
+            GRPC_ENABLED="yes"
+            GRPC_CPP_PLUGIN_PATH=`which grpc_cpp_plugin`
+            if test x"$GRPC_CPP_PLUGIN_PATH" = x""
+            then
+                AC_MSG_ERROR([protoc plugin missing: grpc_cpp_plugin])
+            fi
+
+            grpc_libs=`pkg-config --libs protobuf grpc++ grpc`
+            if test x"$grpc_libs" = x""
+            then
+                AC_MSG_ERROR([grpc dev libraries missing.])
+            else
+                GRPC_LIBS=$grpc_libs
+            fi
+        fi
+    ],
+    [])
+
+AM_CONDITIONAL(BUILD_GRPC, [test x"$GRPC_ENABLED" = x"yes"])
+if test x"$GRPC_ENABLED" = x"yes"
+then
+    AC_DEFINE_UNQUOTED(BUILD_GRPC, 1, [ Enable GRPC ])
+fi
+AC_SUBST(GRPC_LIBS)
+AC_SUBST(GRPC_CPP_PLUGIN_PATH)
+
 #--------------------------------------------------------------------
 # ESX Platform
 
@@ -1685,6 +1717,7 @@ AC_CONFIG_FILES([Makefile
                  lwraft/server/middle-layer/Makefile
                  lwraft/server/schema/Makefile
                  lwraft/server/acl/Makefile
+                 lwraft/server/grpc-head/Makefile
                  lwraft/server/ldap-head/Makefile
                  lwraft/server/rest-head/Makefile
                  lwraft/server/replication/Makefile
