MutentCA: Updated config and integration test setup
- Added security section to mutentca config
- Added allow all policy config in hmake test setup which will be
  used when running hmake test-mutentca

Change-Id: If8f1ed0bcddff974615aff6c302b5eea99910487

--- a/mutentca/config/mutentcaconfig.json
+++ b/mutentca/config/mutentcaconfig.json
@@ -1,4 +1,8 @@
 {
+    "security":{
+        "securityPlugin":"/opt/vmware/lib64/liblwca_security_aws_kms.so",
+        "securityPluginConfig":"/opt/vmware/share/config/casecurity-aws-kms.json"
+    },
     "policy":{
         "policyConfig":"/opt/vmware/share/config/mutentca-policy.json"
     }
