MutentCA: Updated mutentca rpm package to include post db plugin and config
Change-Id: I4ffd56e03cc4613c2c5ae31ea0e32667fe28e3e1

--- a/mutentca/config/Makefile.am
+++ b/mutentca/config/Makefile.am
@@ -3,6 +3,7 @@ mutentcaconf_DATA = \
     mutentcaconfig.json \
     mutentca-policy.json \
     mutentca-rest.json \
+    mutentca-post.json \
     mutentca-schema.ldif \
     mutentcad-syslog-ng.conf \
     mutentca-telegraf.conf
