Base64 Encoding/Decoding for storing octet string
This changeset adds the APIs for encoding and decoding from Base64. This
is required for storing data of attribute type octet string on POST
server (eg: cACertificate in MutentCA).

Testing:
- Updated unit-tests to match the updated fields due to base64 encoding
  and decoding changes.
- Tested on POST server to see PSTR based data get stored on POST

Jira ID: CNA-3244

Change-Id: I171fc777362595033b5ae7570df4bf865056b406

--- a/vmcommon/Makefile.am
+++ b/vmcommon/Makefile.am
@@ -28,7 +28,8 @@ libvmcommon_la_LIBADD = \
     @CURL_LIBS@ \
     @JANSSON_LIBS@ \
     @LWBASE_LIBS@ \
-    @PTHREAD_LIBS@
+    @PTHREAD_LIBS@ \
+    @SASL_LIBS@
 
 libvmcommon_la_LDFLAGS = \
     @CURL_LDFLAGS@ \
