MutentCA: Wired secure key manager with db api's
Change-Id: I6d3315040d464d4a3995efa38451e1a9ed2a3dc9

--- a/mutentca/server/security/Makefile.am
+++ b/mutentca/server/security/Makefile.am
@@ -18,6 +18,7 @@ libmutentcasecurity_la_LIBADD = \
     $(top_builddir)/mutentca/common/libcommon.la \
     $(top_builddir)/mutentca/server/common/libmutentcasrvcommon.la \
     $(top_builddir)/mutentca/server/plugin/libmutentcasrvplugin.la \
+    $(top_builddir)/mutentca/server/db/libmutentcadb.la \
     @LWBASE_LIBS@ \
     @DL_LIBS@
 
