[MutentCA] Add UPN to DN Lookup Function
This changes brings these features:

    1. A function which takes a UPN and queries VMDir via REST LDAP to
    obtain the principal's DN
    2. A function which converts a domain name to LDAP DC DN format
        * e.g. lightwave.com would become dc=lightwave,dc=com
        * e.g. lightwave would become dc=lightwave
    3. Adds a field in the request context to hold the UPN's DN

Change-Id: If21a7ac88924b9cf8fc3446155e2d9d17e634a03

--- a/mutentca/common/Makefile.am
+++ b/mutentca/common/Makefile.am
@@ -22,20 +22,23 @@ libcommon_la_CPPFLAGS = \
     -I$(top_srcdir)/mutentca/include \
     -I$(top_srcdir)/mutentca/include/public \
     -I$(top_srcdir)/vmafd/include/public \
+    -I$(top_srcdir)/vmcommon/include/public \
     -I$(top_srcdir)/vmidentity/ssoclients/oidc/include/public \
     -I$(top_srcdir)/vmidentity/ssoclients/common/include/public \
-    -I$(top_srcdir)/vmcommon/include/public \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@ \
     @JANSSON_INCLUDES@
 
 libcommon_la_LIBADD = \
+    $(top_builddir)/vmcommon/libvmcommon.la \
+    $(top_builddir)/vmafd/client/libvmafdclient.la \
     $(top_builddir)/vmidentity/ssoclients/oidc/src/libssooidc.la \
     @LBER_LIBS@ \
     @LDAP_LIBS@ \
     @LWREG_LIBS@ \
     @LWRSUTILS_LIBS@ \
     @PTHREAD_LIBS@ \
+    @DL_LIBS@ \
     @JANSSON_LIBS@
 
 libcommon_la_LDFLAGS = \
