Added domath_client test program
Build gRPC domath_client test. This is only built when --with-grpc
is passed on the configure command line. This calls the gRPC
MathComputation service built into postd.

Change-Id: Ib6b43a599a06c433ba1d65e2ddc8f8c2a61242fb

--- a/configure.ac
+++ b/configure.ac
@@ -1729,6 +1729,8 @@ AC_CONFIG_FILES([Makefile
                  lwraft/testing/Makefile
                  lwraft/testing/auth/Makefile
                  lwraft/testing/query/Makefile
+                 lwraft/testing/grpc/Makefile
+                 lwraft/testing/grpc/domath/Makefile
                  lwraft/testing/kerberos/Makefile
                  lwraft/testing/test_lib/Makefile
                  lwraft/testing/test_runner/Makefile
