Event Sub system According to new design
Changing the event subsystem according to the new design.

Change-Id: I0b85dbc7a8653e95d65ce821e418728d1bb12c1c

--- a/lwraft/server/watchnotify/Makefile.am
+++ b/lwraft/server/watchnotify/Makefile.am
@@ -3,8 +3,7 @@ noinst_LTLIBRARIES = libwatchnotify.la
 
 libwatchnotify_la_SOURCES = \
     event.c \
-    eventlist.c \
-    eventnode.c
+    eventrepo.c
 
 libwatchnotify_la_CPPFLAGS = \
     -I$(top_srcdir)/lwraft/include \
