Build break fix --with-grpc=no
Appending to post SUBDIRS is wrong, as this compiles the grpc-head library
after building lwraft/server/vmdir. Changed to a conditional variable
added to SUBDIRS before vmdir.

Change-Id: I04147ea2da5bf7c02c55c4c25ab4d407424a0baa

--- a/lwraft/server/Makefile.am
+++ b/lwraft/server/Makefile.am
@@ -26,8 +26,9 @@ SUBDIRS = \
     schema \
     acl \
     watchnotify \
+    $(GRPC_HEAD) \
     vmdir
 
 if BUILD_GRPC
-    SUBDIRS += grpc-head
+    GRPC_HEAD = grpc-head
 endif
