Use MutentCA Endpoint and CA Id for Root Refresh
During domain join, an optional set of args to enable using a MutentCA
endpoint and CA Id for trusted root synchronization can be enabled.
This changes wires up those parameters retrieves roots published by the
specified CA.  After retrieving the root certs, the VMAFD Trusted Root
Sync thread will maintain the trusted root certs which are stored in
VECS.

Jira ID: CNA-3253
Jira ID: CNA-2533

Change-Id: I1eba7925dc8d1eca89ae2feb8df5911253898e25

--- a/vmafd/server/vmafd/Makefile.am
+++ b/vmafd/server/vmafd/Makefile.am
@@ -31,6 +31,8 @@ vmafdd_SOURCES = \
     passrefresh.c \
     regconfig.c   \
     rest.c        \
+    restcerts-lwca.c   \
+    restcerts-vmca.c   \
     restcerts.c   \
     rootfetch.c   \
     rpc.c         \
