Wire Up AuthZ in MutentCA: CSR and Create Int CA
CSR and create intermediate CA APIs make calls to LwCAAuthZCheckAccess
to see if a requestor is authorized to call the API, before fulfilling
the request.

Jira ID: CNA-1974

Change-Id: I038eca06008fd484aca71aba171c459ff0ffeae9

--- a/mutentca/tests/unit-tests/server/api/Makefile.am
+++ b/mutentca/tests/unit-tests/server/api/Makefile.am
@@ -20,6 +20,7 @@ testmutentcaapi_LDADD = \
     $(top_builddir)/mutentca/common/libcommon.la \
     $(top_builddir)/mutentca/server/common/libmutentcasrvcommon.la \
     $(top_builddir)/mutentca/server/db/libmutentcadb.la \
+    $(top_builddir)/mutentca/server/authz/libmutentcaauthz.la \
     $(top_builddir)/mutentca/server/policy/libmutentcapolicy.la \
     $(top_builddir)/mutentca/server/api/libmutentcaapi.la \
     @PTHREAD_LIBS@ \
@@ -55,4 +56,5 @@ testmutentcaapi_LDFLAGS = \
     -Wl,--wrap,LwCADbGetParentCAId \
     -Wl,--wrap,LwCADbUpdateCAStatus \
     -Wl,--wrap,LwCAPolicyValidate \
+    -Wl,--wrap,LwCAAuthZCheckAccess \
     -Wl,--wrap,LwCAPolicyGetCertDuration
