--- a/mutentca/server/api/Makefile.am
+++ b/mutentca/server/api/Makefile.am
@@ -14,6 +14,7 @@ libmutentcaapi_la_CPPFLAGS = \
 libmutentcaapi_la_LIBADD = \
     $(top_builddir)/mutentca/common/libcommon.la \
     $(top_builddir)/mutentca/server/common/libmutentcasrvcommon.la \
+    $(top_builddir)/mutentca/server/authz/libmutentcaauthz.la \
     $(top_builddir)/mutentca/server/db/libmutentcadb.la \
     $(top_builddir)/mutentca/server/security/libmutentcasecurity.la \
     $(top_builddir)/mutentca/server/policy/libmutentcapolicy.la \
