MutentCA add CA Status and Auth Blob Helper Function
This changeset includes 2 new APIs for performing GET operation on CA's
status and auth blob attribute.

Testing:
- Tested on a POST deployed setup.
- Added unit tests for DB layer.

Jira ID: CNA-3595

Change-Id: I81980b971e6b71c4410b4c383f49fa891c1c06d2

--- a/mutentca/tests/unit-tests/server/api/Makefile.am
+++ b/mutentca/tests/unit-tests/server/api/Makefile.am
@@ -42,6 +42,8 @@ testmutentcaapi_LDFLAGS = \
     -Wl,--wrap,LwCASecuritySignX509Request \
     -Wl,--wrap,LwCASecuritySignX509Crl \
     -Wl,--wrap,LwCADbCheckCertData \
+    -Wl,--wrap,LwCADbGetCAStatus \
+    -Wl,--wrap,LwCADbGetCAAuthBlob \
     -Wl,--wrap,LwCADbGetCACRLNumber \
     -Wl,--wrap,LwCADbUpdateCA \
     -Wl,--wrap,LwCADbAddCertData \
