[Watcher] Implement watch session handling
Change-Id: I38f25854f56a07f3c72c89ce964f9f4e9eb45fb2

--- a/lwraft/server/watchnotify/Makefile.am
+++ b/lwraft/server/watchnotify/Makefile.am
@@ -3,7 +3,10 @@ noinst_LTLIBRARIES = libwatchnotify.la
 
 libwatchnotify_la_SOURCES = \
     event.c \
-    eventrepo.c
+    eventrepo.c \
+    sessionmanagerthread.c \
+    watchsession.c \
+    watchsessionmanager.c
 
 libwatchnotify_la_CPPFLAGS = \
     -I$(top_srcdir)/lwraft/include \
