apply hardening flags to vmca  - address review comments iter 1
Change-Id: Iff448836976d34a3ec565fcf36de4a319f9a47d4

--- a/vmca/client/Makefile.am
+++ b/vmca/client/Makefile.am
@@ -3,6 +3,9 @@ lib_LTLIBRARIES = libvmcaclient.la
 
 idl_srcdir=$(top_srcdir)/vmca/idl
 
+#remove after top level configure.ac sets the desired flags by default
+AM_CFLAGS=$(CFLAGS_DESIRED)
+
 libvmcaclient_la_CPPFLAGS = \
     -I$(top_srcdir)/vmca/include \
     -I$(top_srcdir)/vmca/include/public \
