--- a/vmca/service/rest-head/Makefile.am
+++ b/vmca/service/rest-head/Makefile.am
@@ -1,5 +1,8 @@
 noinst_LTLIBRARIES = libvmcaresthead.la
 
+#remove after top level configure.ac sets the desired flags by default
+AM_CFLAGS=$(CFLAGS_DESIRED)
+
 libvmcaresthead_la_SOURCES = \
     libmain.c
 
