--- a/vmca/vmcadb/Makefile.am
+++ b/vmca/vmcadb/Makefile.am
@@ -1,6 +1,9 @@
 
 noinst_LTLIBRARIES = libvmcadb.la
 
+#remove after top level configure.ac sets the desired flags by default
+AM_CFLAGS=$(CFLAGS_DESIRED)
+
 libvmcadb_la_CPPFLAGS = \
     -DLDAP_DEPRECATED \
     -I$(top_srcdir)/vmca/include \
