--- a/vmca/service/plugin/Makefile.am
+++ b/vmca/service/plugin/Makefile.am
@@ -1,5 +1,8 @@
 noinst_LTLIBRARIES = libvmcasrvplugin.la
 
+#remove after top level configure.ac sets the desired flags by default
+AM_CFLAGS=$(CFLAGS_DESIRED)
+
 libvmcasrvplugin_la_SOURCES = \
     plugin.c
 
