--- a/lwraft/server/grpc-head/postwatch/Makefile.am
+++ b/lwraft/server/grpc-head/postwatch/Makefile.am
@@ -1,27 +1,25 @@
-SUBDIRS = postwatch
-
-noinst_LTLIBRARIES = libdomath-grpc.la
+noinst_LTLIBRARIES = libpostwatch.la
 
 idl_srcdir=$(top_srcdir)/lwraft/idl
 
-libdomath_grpc_la_SOURCES = \
-    addint64.c \
-    domath_server_c.c  \
-    domath_server.cc \
-    domath.pb.cc \
-    domath.grpc.pb.cc
+libpostwatch_la_SOURCES = \
+    postwatch_server_c.c  \
+    postwatch_server.cc \
+    postwatch.pb.cc \
+    postwatch.grpc.pb.cc \
+    postwatch_queue.c
 
 GRPC_BUILT_INCLUDES = \
-    domath.grpc.pb.h \
-    domath.pb.h
+    postwatch.grpc.pb.h \
+    postwatch.pb.h
 
 GRPC_BUILT_SRCS = \
-    domath.grpc.pb.cc \
-    domath.grpc.pb.h
+    postwatch.grpc.pb.cc \
+    postwatch.grpc.pb.h
 
 PROTOBUF_BUILT_SRCS = \
-    domath.pb.cc \
-    domath.pb.h
+    postwatch.pb.cc \
+    postwatch.pb.h
 
 CLEANFILES = \
     $(GRPC_BUILT_SRCS) \
@@ -30,7 +28,7 @@ CLEANFILES = \
 
 BUILT_SOURCES = $(GRPC_BUILT_INCLUDES)
 
-libdomath_grpc_la_CPPFLAGS = \
+libpostwatch_la_CPPFLAGS = \
     -I$(top_srcdir)/lwraft/include \
     -I$(top_srcdir)/lwraft/include/public \
     -Wall  -Werror \
@@ -39,11 +37,11 @@ libdomath_grpc_la_CPPFLAGS = \
 PROTOC = protoc
 PROTOS_PATH = $(idl_srcdir)
 
-$(GRPC_BUILT_SRCS): $(PROTOS_PATH)/domath.proto
+$(GRPC_BUILT_SRCS): $(PROTOS_PATH)/postwatch.proto
 	$(PROTOC) -I $(PROTOS_PATH) --grpc_out=. --plugin=protoc-gen-grpc=$(GRPC_CPP_PLUGIN_PATH) $<
 
-$(PROTOBUF_BUILT_SRCS): $(PROTOS_PATH)/domath.proto
+$(PROTOBUF_BUILT_SRCS): $(PROTOS_PATH)/postwatch.proto
 	$(PROTOC) -I $(PROTOS_PATH) --cpp_out=. $<
 
-libdomath_grpc_la_LDFLAGS = \
+libpostwatch_la_LDFLAGS = \
     -static
