--- a/vmafd/tools/dir-cli/Makefile.am
+++ b/vmafd/tools/dir-cli/Makefile.am
@@ -1,5 +1,8 @@
 bin_PROGRAMS = dir-cli
 
+#remove after top level configure.ac sets the desired flags by default
+AM_CFLAGS=$(CFLAGS_DESIRED)
+
 dir_cli_SOURCES = \
     cert.c \
     cli.c  \
