--- a/vmafd/tools/domainjoin/Makefile.am
+++ b/vmafd/tools/domainjoin/Makefile.am
@@ -1,5 +1,8 @@
 bin_PROGRAMS = domainjoin
 
+#remove after top level configure.ac sets the desired flags by default
+AM_CFLAGS=$(CFLAGS_DESIRED)
+
 domainjoin_SOURCES = \
     info.c \
     join.c \
