--- a/vmafd/tools/sl-cli/Makefile.am
+++ b/vmafd/tools/sl-cli/Makefile.am
@@ -1,5 +1,8 @@
 bin_PROGRAMS = sl-cli
 
+#remove after top level configure.ac sets the desired flags by default
+AM_CFLAGS=$(CFLAGS_DESIRED)
+
 sl_cli_SOURCES = \
     superlogWrapper.c \
     parseargs.c \
