--- a/vmafd/tools/vecs-cli/Makefile.am
+++ b/vmafd/tools/vecs-cli/Makefile.am
@@ -1,5 +1,8 @@
 bin_PROGRAMS = vecs-cli
 
+#remove after top level configure.ac sets the desired flags by default
+AM_CFLAGS=$(CFLAGS_DESIRED)
+
 vecs_cli_SOURCES = \
     cli.c  \
     main.c \
