--- a/vmafd/vmafcfg/posix/Makefile.am
+++ b/vmafd/vmafcfg/posix/Makefile.am
@@ -4,6 +4,9 @@
 
 noinst_LTLIBRARIES = libvmafposixcfg.la
 
+#remove after top level configure.ac sets the desired flags by default
+AM_CFLAGS=$(CFLAGS_DESIRED)
+
 libvmafposixcfg_la_SOURCES = \
     config.c \
     globals.c \
