[Notifier] Notify thread and filter logic for send event
Change-Id: I4c146c6fbbab8ca70fd79035dc7e7e3c5f3ec201

--- a/lwraft/server/watchnotify/Makefile.am
+++ b/lwraft/server/watchnotify/Makefile.am
@@ -4,6 +4,7 @@ noinst_LTLIBRARIES = libwatchnotify.la
 libwatchnotify_la_SOURCES = \
     event.c \
     eventrepo.c \
+    notifythread.c \
     sessionmanagerthread.c \
     watchsession.c \
     watchsessionmanager.c
