--- a/plugins/unit-tests/security_aws_kms/Makefile.am
+++ b/plugins/unit-tests/security_aws_kms/Makefile.am
@@ -6,7 +6,8 @@ TESTS = security_aws_kms_test
 security_aws_kms_test_CPPFLAGS = \
     -I$(top_srcdir)/plugins/unit-tests/security_aws_kms \
     -I$(top_srcdir)/plugins/include/public \
-    -I$(top_srcdir)/plugins/lwca_security_aws_kms/src
+    -I$(top_srcdir)/plugins/lwca_security_aws_kms/src \
+    -I$(top_srcdir)/vmcommon/include/public
 
 security_aws_kms_test_SOURCES = \
     main.c \
