--- a/mutentca/server/mutentca/Makefile.am
+++ b/mutentca/server/mutentca/Makefile.am
@@ -15,6 +15,8 @@ mutentcad_CPPFLAGS = \
     -I$(top_srcdir)/mutentca/server/common \
     -I$(top_srcdir)/mutentca/server/config \
     -I$(top_srcdir)/vmafd/include/public \
+    -I$(top_srcdir)/vmidentity/ssoclients/common/include/public \
+    -I$(top_srcdir)/vmidentity/ssoclients/oidc/include/public \
     @LW_INCLUDES@ \
     @POPT_INCLUDES@ \
     @OPENSSL_INCLUDES@ \
