better error codes and retry for domain join - tested for error code translation to client tools - fixed error code translation
Change-Id: I0483bddbe65e768ff1ca62ac704276b633cfa2a5

--- a/vmafd/common/Makefile.am
+++ b/vmafd/common/Makefile.am
@@ -36,6 +36,7 @@ libcommon_la_CPPFLAGS = \
     -I$(top_srcdir)/vmafd/include \
     -I$(top_srcdir)/vmafd/include/public \
     -I$(top_srcdir)/vmdir/include/public \
+    -I$(top_srcdir)/vmidentity/ssoclients/common/include/public \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@
 
