Libmain and fix for event data struct
Change-Id: I5c41f1cbb925ada38efd2b916502329873a3fda8

--- a/lwraft/server/watchnotify/Makefile.am
+++ b/lwraft/server/watchnotify/Makefile.am
@@ -4,6 +4,8 @@ noinst_LTLIBRARIES = libwatchnotify.la
 libwatchnotify_la_SOURCES = \
     event.c \
     eventrepo.c \
+    globals.c \
+    libmain.c \
     notifythread.c \
     sessionmanagerthread.c \
     watchsession.c \
