Add REST API to create computer account
This change adds a new REST API for creating a computer account:

    /v1/vmdir/api/join/createcomputeraccount

query parameters:
    machine_account_name (required)
    domain_name (optional)
    org_unit (optional)

Change-Id: Id7f70d40ac245732fb9b63bf01560d2aa207d375

--- a/vmdir/server/api/Makefile.am
+++ b/vmdir/server/api/Makefile.am
@@ -3,6 +3,7 @@ noinst_LTLIBRARIES = libvmdirserverapi.la
 
 libvmdirserverapi_la_SOURCES = \
     certs.c \
+    createcomputer.c \
     joinatomic.c \
     password.c
 
