MutentCA: Added AIA info in certificate and crl
* Added unit tests

Jira-Id:CNA-3681

Change-Id: Iec9ad170b90ed5c4fc9510813ad780d5825dc5b8

--- a/mutentca/tests/unit-tests/server/common/Makefile.am
+++ b/mutentca/tests/unit-tests/server/common/Makefile.am
@@ -4,6 +4,7 @@ check_PROGRAMS = testmutentcasrvcommon
 TESTS = testmutentcasrvcommon
 
 testmutentcasrvcommon_SOURCES = \
+    init.c \
     jsonutils.c \
     main.c \
     mock.c \
