MutentCA: Collect Rest API Metrics
- This collects REST API Metrics, that is the duration taken by each
  REST API in Prometheus Histogram format
- Duration is calculated from RestOperationCreate to RestOperationWriteResponse
- Labels used are request url, http method and http status code
- Updated mutentca-telegraf conf

Change-Id: Id13cef7b02b948b0d29f99c085b34942dc09e89a

--- a/configure.ac
+++ b/configure.ac
@@ -1971,6 +1971,7 @@ AC_CONFIG_FILES([Makefile
                  mutentca/server/plugins/post/Makefile
                  mutentca/server/policy/Makefile
                  mutentca/server/rest-head/Makefile
+                 mutentca/server/metrics/Makefile
                  mutentca/server/mutentca/Makefile
                  mutentca/tests/Makefile
                  mutentca/tests/unit-tests/Makefile
