--- a/mutentca/config/mutentca-telegraf.conf
+++ b/mutentca/config/mutentca-telegraf.conf
@@ -1,3 +1,6 @@
 [[inputs.procstat]]
   exe="mutentcad"
   prefix="mutentca"
+
+[[inputs.prometheus]]
+  urls = ["http://localhost:7877/v1/mutentca/metrics"]
