Initial code for post-manager
Added skeleton code for post-manager. It starts up, reads the DC account from likewise and prints it out.
Updated the lwreg config so that post-manager process (postmd) is started instead of postd.
Verified that startup and shutdown of postmd through likewise works fine.

Change-Id: I20a088be75cdb50b00ea34a131370247f06d6ce9

--- a/configure.ac
+++ b/configure.ac
@@ -1762,6 +1762,7 @@ AC_CONFIG_FILES([Makefile
                  lwraft/server/replication/Makefile
                  lwraft/server/saslvmdirdb/Makefile
                  lwraft/server/vmdir/Makefile
+                 lwraft/post-manager/Makefile
                  lwraft/client/Makefile
                  lwraft/config/post.reg
                  lwraft/testing/Makefile
