MutentCA: Collect Backend API Metrics
- This collects Backend API Metrics, that is the duration taken by each
  CA Backent API in Prometheus Histogram format
- Duration is calculated from start to the end of the api call
- Labels used are api name and response code (success/error)

Change-Id: I1aefed0a65276669a6971d113a86e1c96062ac40

--- a/mutentca/tests/unit-tests/server/api/Makefile.am
+++ b/mutentca/tests/unit-tests/server/api/Makefile.am
@@ -23,6 +23,7 @@ testmutentcaapi_LDADD = \
     $(top_builddir)/mutentca/server/authz/libmutentcaauthz.la \
     $(top_builddir)/mutentca/server/policy/libmutentcapolicy.la \
     $(top_builddir)/mutentca/server/api/libmutentcaapi.la \
+    $(top_builddir)/mutentca/server/metrics/libmutentcametrics.la \
     @PTHREAD_LIBS@ \
     @JANSSON_LIBS@ \
     @CRYPTO_LIBS@ \
