--- a/mutentca/server/api/Makefile.am
+++ b/mutentca/server/api/Makefile.am
@@ -9,6 +9,7 @@ libmutentcaapi_la_CPPFLAGS = \
     -I$(top_srcdir)/mutentca/include/public \
     -I$(top_srcdir)/mutentca/server/include \
     -I$(top_srcdir)/mutentca/server/common \
+    -I$(top_srcdir)/vmcommon/include/public \
     @LW_INCLUDES@
 
 libmutentcaapi_la_LIBADD = \
@@ -18,6 +19,7 @@ libmutentcaapi_la_LIBADD = \
     $(top_builddir)/mutentca/server/db/libmutentcadb.la \
     $(top_builddir)/mutentca/server/security/libmutentcasecurity.la \
     $(top_builddir)/mutentca/server/policy/libmutentcapolicy.la \
+    $(top_builddir)/vmcommon/libvmcommon.la \
     @DL_LIBS@
 
 libmutentcaapi_la_LDFLAGS = \
