--- a/ui/lightwave-ui/idm/package.json
+++ b/ui/lightwave-ui/idm/package.json
@@ -13,8 +13,7 @@
     "gulp-clean": "0.4.0",
     "gulp-html-minifier": "0.1.8",
     "gulp-clean-css": "3.9.4",
-    "angular-mocks": "1.5.6",
-    "bower": "1.8.4"
+    "angular-mocks": "1.5.6"
   },
   "scripts": {
     "prestart": "npm install",
@@ -27,5 +26,18 @@
     "update-webdriver": "webdriver-manager update",
     "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map','app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
   },
-  "dependencies": {}
+  "dependencies": {
+    "angular": "1.5.8",
+    "angular-bootstrap": "^0.12.2",
+    "angular-cookies": "^1.5.8",
+    "angular-flash-alert": "^2.4.0",
+    "angular-loader": "^1.5.8",
+    "angular-mocks": "^1.5.8",
+    "angular-route": "^1.5.8",
+    "html5-boilerplate": "^5.3.0",
+    "jquery": "^3.0.0",
+    "moment": "^2.12.0",
+    "ng-dialog": "^0.6.6",
+    "ng-file-upload": "^12.2.13"
+  }
 }
