[Watcher] Integrate with middle layer
Initial review for middle layer intergration.

TODO:

1) Clean build

Change-Id: I12fde8da89f94fd21b3651ef7a4780591b00d307

--- a/lwraft/server/middle-layer/Makefile.am
+++ b/lwraft/server/middle-layer/Makefile.am
@@ -15,6 +15,7 @@ libmiddle_layer_la_SOURCES = \
     computedattribute.c \
     delete.c \
     dn.c \
+    eventapi.c \
     globals.c \
     group.c \
     index.c \
