add get name api to security plugins
Change-Id: I7f59404c697cfcb9b3410983c4e9a4c60fa42d1d

--- a/plugins/unit-tests/security_aws_kms/Makefile.am
+++ b/plugins/unit-tests/security_aws_kms/Makefile.am
@@ -13,6 +13,7 @@ security_aws_kms_test_SOURCES = \
     main.c \
     security_aws_kms_test_global.c \
     security_aws_kms_test_check_version.c \
+    security_aws_kms_test_check_name.c \
     security_aws_kms_test_validate_interface.c \
     security_aws_kms_test_create_key_pair.c \
     security_aws_kms_test_config_parse.c
