make json from object map write json to disk tests for the same
Change-Id: Iae829d72eb7d79172f12654ccaf04eef6d5badac

--- a/vmcommon/testing/Makefile.am
+++ b/vmcommon/testing/Makefile.am
@@ -12,6 +12,7 @@ vmcommon_test_SOURCES = \
     vmsignaturetest.c \
     vmjsonresulttest.c \
     vmjsonresultobjectmaptest.c \
+    vmjsonresultfromobjectmaptest.c \
     main.c
 
 vmcommon_test_CPPFLAGS = \
